--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="shortcut icon" type="image/png" href="/img/bankofdog_icon.png">
   <title>Bank Of Dog</title>
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/index.css?new=true">
   <script src="/js/index.js"></script>
 </head>
 <body>
