--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <head>
   <link rel="shortcut icon" type="image/png" href="/img/bankofdog_icon.png">
   <title>Bank Of Dog</title>
-  <link rel="stylesheet" href="/css/index.css?new=true">
+  <link rel="stylesheet" href="/css/index.css">
   <script src="/js/index.js"></script>
 </head>
+
 <body>
   <div align="center">
     <h1 class="text">Welcome to Bank Of Dog!</h1>
+    <img src="/img/spin.gif" height="128" width="128">
+    <div class="spacer"></div>
     <div fancy-box>
       <p class="text">Bank Of Dog server IP: <b>play.bankofdog.ml</b></p>
       <button class="button is-info" onclick="javascript:copyIP();">Click to copy</button>
     </div>
   </div>
-  <main>
-    <div align="center">
-    </div>
-  </main>
 </body>
